# hpcse2

./: README.md
ex02/: README.md  load_modules.sh
ex02/examples/: README.md
ex02/examples/example_1/: run-cmaes.py
ex02/examples/example_1/_model/: model.py
ex02/examples/example_2/: run-cmaes.py
ex02/examples/example_2/_model/: model.py
ex02/examples/example_3/: run-tmcmc.py
ex02/examples/example_3/_model/: model.py
ex02/examples/example_4/: Makefile  run-cmaes.cpp  run-tmcmc.cpp
ex02/task2/: run-cmaes.py  sample_gen_measures.csv
ex02/task2/_model/: model.py
ex02/task3/part_I/: run-cmaes.py
ex02/task3/part_I/_model/: model.py
ex02/task3/part_II/: results.csv  run-tmcmc.py
ex02/task3/part_II/_model/: model.py
ex02/task3/skeleton_code/part_II/: run-tmcmc.py
ex02/task4/: Makefile  ncandles.cpp  results.csv  run-korali.cpp  tmcmc.cpp
ex02/task4/skeleton_code/: run-korali.cpp
ex03/skeleton_code/task1/: Makefile  README.md  main.cpp  wave.cpp  wave.hpp
ex03/skeleton_code/task2/: Makefile  README.md  n_body.cpp
ex03/task1/: plot.py
ex04/skeleton_code/task01_bandwidth/: bandwidth.cpp
ex04/skeleton_code/task02_CToverlap/: .gitignore
ex04/skeleton_code/task02_CToverlap/include/: LaplacianSmootherMPI.h
ex04/skeleton_code/task02_CToverlap/src/: LaplacianSmoother.cpp  LaplacianSmootherMPI.cpp
ex04/task01_bandwidth/: .gitignore  Makefile  bandwidth.cpp
ex04/task02_CToverlap/: main.cpp  mainMPI.cpp  meson.build
ex04/task02_CToverlap/include/: LaplacianSmoother.h
ex05/skeleton_code/task1/: force_kernel_0.cu  main.cu
ex05/skeleton_code/task2/part_a/: meson.build
ex05/skeleton_code/task2/part_b/: meson.build
ex05/skeleton_code/task3/: meson.build
ex05/task1/: Makefile  force_kernel_1.cu  force_kernel_2.cu  force_kernel_4.cu
ex05/task2/part_a/: device_properties.cu
ex05/task2/part_b/: fpeak.cu
ex05/task3/: memory_copy.cu
